--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -50,6 +50,8 @@ blockquote {
     margin-left: 0;
     padding: 20px;
     margin-left: 25px;
+    font-family: "Bree Serif";
+    color: #b29f93;
 }
 
 blockquote p {
