--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2569,7 +2569,7 @@ article .post-content .has-content-area {
 }
 
 .search-post .imagen {
-    max-width: 200px;
+    width: 300px;
     height: 100%;
 }
 
