--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2568,7 +2568,7 @@ article .post-content .has-content-area {
     align-items: center;
 }
 
-.search-post .imagen {
+.search-post .imagen img {
     width: 300px;
     height: 100%;
 }
