--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2568,9 +2568,13 @@ article .post-content .has-content-area {
     align-items: center;
 }
 
+.search-post .imagen {
+    width: 200px;
+}
+
 .search-post .imagen img {
-    width: 300px;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 
