--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2576,6 +2576,7 @@ article .post-content .has-content-area {
 .search-post .imagen img {
     max-width: 100%;
     max-height: 100%;
+    object-fit: contain;
 }
 
 
