--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2569,14 +2569,16 @@ article .post-content .has-content-area {
 }
 
 .search-post .imagen {
-    max-width: 300px;
-    overflow: hidden;
+    width: 300px;
+    height: 300px;
+    background-position: center;
+    background-size: cover;
 }
 
 .search-post .imagen img {
     width: 100%;
     max-height: 100%;
-    object-fit: contain;
+    opacity: 0;
 }
 
 
