--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2563,9 +2563,8 @@ article .post-content .has-content-area {
 /* ---------------------------*/
 
 .search-post {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
 }
 
 .search-post .imagen {
