--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2565,6 +2565,7 @@ article .post-content .has-content-area {
 .search-post {
     display: grid;
     grid-template-columns: 1fr 3fr;
+    grid-gap: 20px;
 }
 
 .search-post .imagen {
@@ -2578,6 +2579,11 @@ article .post-content .has-content-area {
     width: 100%;
     max-height: 100%;
     opacity: 0;
+}
+
+.search-post h3 {
+    margin: 10px 0;
+    font-size: 18px;
 }
 
 
