--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2566,6 +2566,7 @@ article .post-content .has-content-area {
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-gap: 20px;
+    margin-bottom: 20px;
 }
 
 .search-post .imagen {
@@ -2583,7 +2584,7 @@ article .post-content .has-content-area {
 
 .search-post h3 {
     margin: 10px 0;
-    font-size: 18px;
+    font-size: 22px;
 }
 
 
