--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2585,6 +2585,7 @@ article .post-content .has-content-area {
 .search-post h3 {
     margin: 10px 0;
     font-size: 22px;
+    color: #333333;
 }
 
 
