--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2567,6 +2567,7 @@ article .post-content .has-content-area {
     grid-template-columns: 1fr 3fr;
     grid-gap: 20px;
     margin-bottom: 20px;
+    font-size: "Bree Serif";
 }
 
 .search-post .imagen {
