--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2591,7 +2591,7 @@ article .post-content .has-content-area {
 
 .search-post .search-content {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     flex-direction: column;
 }
 
