--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2600,6 +2600,7 @@ article .post-content .has-content-area {
     font-size: 14px;
     color: #c4afa1;
     border-bottom: 2px solid #ccc;
+    padding-bottom: 10px;
 }
 
 .search-post .comentarios-noshare {
