--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2618,6 +2618,7 @@ article .post-content .has-content-area {
 
 .search-results .page-header {
     margin: 0;
+    margin-bottom: 50px;
     margin-left: 100px;
 }
 
