--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2620,6 +2620,7 @@ article .post-content .has-content-area {
     margin: 0;
     margin-bottom: 50px;
     margin-left: 100px;
+    background: #c4afa1;
 }
 
 
