--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2619,7 +2619,7 @@ article .post-content .has-content-area {
 .search-results .page-header {
     margin: 0;
     margin-bottom: 50px;
-    margin-left: 100px;
+    padding-left: 100px;
     background: #c4afa1;
 }
 
