--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2641,6 +2641,10 @@ article .post-content .has-content-area {
     width: 100%;
 }
 
+.search-results .page-header .page-description:after {
+    display: none;
+}
+
 .search-results .page-header:before {
     position: absolute;
     left: 10px;
