--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2634,11 +2634,12 @@ article .post-content .has-content-area {
 .search-results .page-header .page-description {
     background: #edede6;
     color: #333333;
-    padding: 20px;
+    padding: 10px 15px;
     position: absolute;
     bottom: -20px;
     font-family: "Bree Serif";
     width: 100%;
+    font-weight: 400;
 }
 
 .search-results .page-header .page-description:after {
