--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2662,6 +2662,7 @@ article .post-content .has-content-area {
     padding: 10px;
     font-family: "Bree Serif";
     font-weight: 400;
+    color: #b29f93;
 }
 
 
