--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2669,5 +2669,10 @@ article .post-content .has-content-area {
     color: #b29f93;
 }
 
+.nav-next-text,
+.nav-prev-text {
+    display: none;
+}
+
 
 /* END SEARCH*/
