--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2671,7 +2671,7 @@ article .post-content .has-content-area {
 
 .nav-next-text,
 .nav-prev-text {
-    display: none;
+    display: none !important;
 }
 
 
