--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2663,10 +2663,17 @@ article .post-content .has-content-area {
     font-family: "Bree Serif";
     font-weight: 400;
     color: #b29f93;
+    margin: 0;
+    display: flex;
+    justify-content: center;
 }
 
 .pagination .nav-links a {
     color: #b29f93;
+}
+
+.pagination .nav-links .current {
+    text-decoration: underline;
 }
 
 .pagination .nav-links .prev>.nav-prev-text,
