--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2596,6 +2596,10 @@ article .post-content .has-content-area {
     flex-direction: column;
 }
 
+.search-post .search-content {
+    font-size: 16px;
+}
+
 .search-post .search-content span.time-ago {
     font-size: 14px;
     color: #c4afa1;
