--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2662,7 +2662,7 @@ article .post-content .has-content-area {
 
 .search .no-results .page-title,
 .search .no-results .page-content {
-    margin: 50px 20px;
+    margin-top: 80px;
 }
 
 .search .no-results {
