--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2662,7 +2662,7 @@ article .post-content .has-content-area {
 
 .search .no-results .page-title,
 .search .no-results .page-content {
-    margin-top: 80px;
+    margin: 20px;
 }
 
 .search .no-results {
@@ -2673,6 +2673,7 @@ article .post-content .has-content-area {
     font-family: "Bree Serif";
     font-size: 26px;
     font-weight: normal;
+    margin-top: 80px;
 }
 
 .pagination .nav-links {
