--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1133,6 +1133,22 @@ ul.tagposts-list li {
 /* ---------------------------*/
 
 
+/*--------- SECCION */
+
+
+/* ---------------------------*/
+
+.seccion-posts {
+    display: grid;
+}
+
+
+/*SECCION*/
+
+
+/* ---------------------------*/
+
+
 /*--------- SHORTCODES */
 
 
