--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1144,7 +1144,7 @@ ul.tagposts-list li {
     margin-bottom: 50px;
 }
 
-.archive-header {
+.archive-header .archive-title {
     display: inline-block;
     margin-top: 10px;
     padding: 10px;
