--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1148,6 +1148,7 @@ ul.tagposts-list li {
     display: inline-block;
     margin-top: 10px;
     padding: 10px;
+    color: #fff;
 }
 
 .archive-title .title {
