--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1168,7 +1168,7 @@ ul.tagposts-list li {
     content: '';
     width: 20px;
     height: 2px;
-    color: #fff;
+    background: #fff;
     display: inline-block;
 }
 
