--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1162,6 +1162,7 @@ ul.tagposts-list li {
 
 .archive-title .category {
     display: flex;
+    align-items: center;
 }
 
 .archive-title .category::before {
