--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1160,6 +1160,7 @@ ul.tagposts-list li {
     background: #edede6;
     padding: 20px;
     margin: 0px;
+    font-size: 40px;
 }
 
 .archive-title img {
