--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1161,6 +1161,7 @@ ul.tagposts-list li {
     padding: 20px;
     margin: 0px;
     font-size: 40px;
+    color: #666666;
 }
 
 .archive-title img {
