--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1160,8 +1160,11 @@ ul.tagposts-list li {
     background: #edede6;
     padding: 20px;
     margin: 0px;
-    font-size: 40px;
+    font-size: 35px;
     color: #666666;
+    margin-bottom: -60px;
+    position: relative;
+    z-index: 2;
 }
 
 .archive-title img {
