--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1175,11 +1175,11 @@ ul.tagposts-list li {
 .archive-title .category {
     display: flex;
     align-items: flex-end;
-    margin-bottom: 20px;
+    margin: 0 20px;
 }
 
 .archive-title .category h3 {
-    margin: 20px 0;
+    margin: 0;
     margin-left: 20px;
     font-size: 30px;
     line-height: 22px;
