--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1175,7 +1175,7 @@ ul.tagposts-list li {
 .archive-title .category {
     display: flex;
     align-items: flex-end;
-    margin: 0 20px;
+    margin: 20px 0;
 }
 
 .archive-title .category h3 {
