--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -930,6 +930,7 @@ ul.tagposts-list li {
     display: grid;
     grid-template-columns: 1fr 9fr 4fr;
     margin: 10px 0;
+    border-bottom: 1px solid #333333;
 }
 
 .comentarios-noshare {
