--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2161,6 +2161,7 @@ ul.tagposts-list li {
 .post-imagen img:before {
     content: '';
     width: 100%;
+    height: 100%;
     position: absolute;
     bottom: 0px;
     left: 0px;
