--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2158,7 +2158,7 @@ ul.tagposts-list li {
     position: relative;
 }
 
-.post-imagen .post-image-container:before {
+.post-imagen .post-imagen-container:before {
     content: '';
     width: 100%;
     height: 100%;
