--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1215,7 +1215,6 @@ ul.tagposts-list li {
 /* LOAD MORE POSTS */
 
 .loadmore {
-    background-color: #ddd;
     border-radius: 2px;
     display: block;
     text-align: center;
@@ -1226,7 +1225,17 @@ ul.tagposts-list li {
     cursor: pointer;
     text-transform: uppercase;
     padding: 10px 0;
-    transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.3s ease-in-out;
+}
+
+.loadmore:before {
+    width: 100%;
+    height: 4px;
+    background: #e7d117;
+    content: '';
+}
+
+.loadmore img {
+    width: 50px;
 }
 
 .loadmore:hover {
