--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1248,7 +1248,7 @@ ul.tagposts-list li {
 }
 
 .spin {
-    animation: spin 4s infinite linear;
+    animation: spin 300ms infinite ease;
 }
 
 @-moz-keyframes spin {
