--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1696,14 +1696,19 @@ ul.tagposts-list li {
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.16);
 }
 
+.video:hover .player-icon {
+    opacity: 1;
+}
+
 .video .player-icon {
     width: 80px;
+    opacity: 0.4;
+    transition: 300ms ease;
 }
 
 .video .player-icon img {
     width: 100%;
     height: 100%;
-    ;
 }
 
 .popup-video {
