--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1729,6 +1729,7 @@ ul.tagposts-list li {
 .mfp-content .popup-content {
     background: #fff;
     margin: 0 auto;
+    width: 600px;
     max-width: auto;
     /* text-align: center; */
     display: flex;
@@ -1758,6 +1759,7 @@ ul.tagposts-list li {
 .popup-content h3 {
     margin: 0px;
     margin-right: 20px;
+    margin-bottom: 20px;
     font-size: 20px;
 }
 
