--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1766,7 +1766,8 @@ ul.tagposts-list li {
 .video-item {
     padding: 20px;
     background: #fff;
-    border: 1px solid #111;
+    border-top: 1px solid #1a1a1a;
+    border-bottom: 1px solid #1a1a1a;
     font-size: 18px;
 }
 
