--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2911,6 +2911,14 @@ article .post-content .has-content-area {
     width: 50px;
 }
 
+.encuesta-container .encabezado {
+    display: flex;
+}
+
+.encuesta-container .encabezado img {
+    width: 150px;
+}
+
 .encuesta-container .titulo h3 {
     text-transform: uppercase;
 }
