--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2916,7 +2916,11 @@ article .post-content .has-content-area {
 }
 
 .encuesta-container .encabezado img {
-    width: 150px;
+    width: 100px;
+}
+
+.encuesta-container .titulo {
+    margin-left: 20px;
 }
 
 .encuesta-container .titulo h3 {
