--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2913,6 +2913,7 @@ article .post-content .has-content-area {
 
 .encuesta-container .encabezado {
     display: flex;
+    margin: 20px 0;
 }
 
 .encuesta-container .encabezado img {
