--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2904,6 +2904,7 @@ article .post-content .has-content-area {
 
 .encuesta-section {
     border-top: 5px solid #e7d117;
+    font-family: "Bree Serif";
 }
 
 .encuesta-container .titulo::before {
