--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2927,6 +2927,8 @@ article .post-content .has-content-area {
 
 .encuesta-container .titulo h3 {
     text-transform: uppercase;
+    color: #b29f93;
+    margin-bottom: 0px;
 }
 
 
