--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2925,7 +2925,7 @@ article .post-content .has-content-area {
     margin-left: 20px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
 }
 
 .encuesta-container .titulo h3 {
