--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2919,6 +2919,7 @@ article .post-content .has-content-area {
 
 .encuesta-container .encabezado img {
     width: 100px;
+    margin-left: 20px;
 }
 
 .encuesta-container .titulo {
