--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2950,5 +2950,18 @@ article .post-content .has-content-area {
     text-align: center;
 }
 
+.encuesta-section .opciones .opcion .image-container {
+    position: relative;
+    width: 300px;
+    height: 300px;
+}
+
+.encuesta-section .opciones .opcion .image-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+}
+
 
 /* END ENCUESTAS*/
