--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2905,6 +2905,7 @@ article .post-content .has-content-area {
 .encuesta-section {
     border-top: 10px solid #e7d117;
     font-family: "Bree Serif";
+    margin-bottom: 50px;
 }
 
 .encuesta-section .titulo::before {
