--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2944,6 +2944,15 @@ article .post-content .has-content-area {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+
+.encuesta-section .opciones::before {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 200px;
+    background: #e7d117;
 }
 
 .encuesta-section .opciones .opcion {
@@ -2967,7 +2976,7 @@ article .post-content .has-content-area {
     font-size: 16px;
     border: 2px solid #e7d117;
     display: inline-block;
-    padding: 5px 10px;
+    padding: 0px 10px;
     position: relative;
     top: -20px;
 }
