--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2123,7 +2123,7 @@ ul.tagposts-list li {
     color: #fff;
     font-size: 17px;
     font-weight: bold;
-    text-decoration: underline;
+    text-decoration: none;
     transition: 0.2s;
 }
 
