--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -748,6 +748,7 @@ button {
 #ctf .ctf-item {
     display: flex;
     flex-direction: column;
+    font-family: 'Bree Serif', serif;
 }
 
 #ctf .ctf-author-box {
@@ -765,14 +766,14 @@ button {
     font-size: 15px;
     display: flex;
     padding: 5px 10px !important;
-    border: 1px solid #ccc;
+    /*border: 1px solid #ccc;*/
     margin-bottom: 5px;
     border-top: 0px;
     border-radius: 0px 0px 10px 10px;
 }
 
 .ctf-tweet-content {
-    border: 1px solid #ccc;
+    /*border: 1px solid #ccc;*/
     border-bottom: 0px;
     border-radius: 10px 10px 0px 0px;
     padding: 5px 10px !important;
