--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1072,8 +1072,8 @@ ul.tagposts-list li {
 .render-posts {
     display: grid;
     grid-gap: 30px;
-    margin-bottom: 50px;
-    margin-top: 50px;
+    margin-bottom: 25px;
+    margin-top: 25px;
 }
 
 .col-2 {
@@ -2086,7 +2086,7 @@ ul.tagposts-list li {
 }
 
 .footer-logo {
-    margin: 50px auto;
+    margin: 50px auto 0px auto;
     text-align: center;
     border-bottom: 2px solid #fff;
 }
@@ -2122,6 +2122,8 @@ ul.tagposts-list li {
 .footer-widget-1 .widget p {
     color: #fff;
     font-size: 17px;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
 }
 
 .footer-widget-1 .widget a {
