--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2998,7 +2998,7 @@ article .post-content .has-content-area {
     align-items: center;
     height: 0;
     color: #fff;
-    background: rgba(0, 0, 0, 0.4);
+    background: rgb(231, 209, 23, 0.4);
 }
 
 
