--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3003,6 +3003,8 @@ article .post-content .has-content-area {
     width: 100%;
     color: #fff;
     background: rgb(231, 209, 23, 0.4);
+    font-family: "Bree Serif";
+    font-weight: 400;
 }
 
 
