--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1077,10 +1077,12 @@ ul.tagposts-list li {
 }
 
 .col-2 {
+    display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
 .col-3 {
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
