--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1077,12 +1077,16 @@ ul.tagposts-list li {
 }
 
 .col-2 {
+    margin-bottom: 50px;
+    margin-top: 50px;
     grid-gap: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
 .col-3 {
+    margin-bottom: 50px;
+    margin-top: 50px;
     grid-gap: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
